# bustleit-backend-aws

./: .gitignore  Cargo.toml  Cargo.toml.old  LICENSE  README.md  samconfig.toml  template.yaml
crates/ai-lambda/: Cargo.toml
crates/ai-lambda/src/: main.rs
crates/ai-lambda/src/handlers/: ai.rs  schedule.rs
crates/auth-lambda/src/handlers/: auth.rs
crates/common/: Cargo.toml
crates/common/src/models/: mod.rs
crates/common/src/models/ai/: cluster.rs  recommend.rs
crates/common/src/models/dynamodb/: mod.rs  user_stats.rs  user_tasks.rs
crates/common/src/models/userdata/: mod.rs  profile.rs  schedule.rs
crates/common/src/models/webapp/: mod.rs  user_tasks.rs
crates/common/src/services/: dynamodb.rs  mock_db.rs  mod.rs
crates/recommend-lambda/src/handlers/: recommend.rs
events/test-events/: auth.json
events/test-events/ai/: ai_userdata.json
events/test-events/recommend/: recommend.json
migrations/: 20241124000001_schema_snapshot.down.sql  20241124000001_schema_snapshot.sql
rust_app/: Cargo.toml
rust_app/src/: main.rs
rust_app/src/handlers/: ai.rs  auth.rs  health.rs  mod.rs  recommend.rs
rust_app/src/models/: ai.rs  auth.rs  mod.rs  recommend.rs
rust_app/src/models/ai/: cluster.rs  recommend.rs
rust_app/src/models/userdata/: profile.rs
rust_app/src/services/: mock_db.rs
src/common/: Cargo.toml
src/common/src/: error.rs  lib.rs
src/common/src/database/: config.rs  mod.rs  pool.rs
src/common/src/models/: mod.rs
src/common/src/models/database/: mod.rs  profiles.rs  schedules.rs  tasks.rs  users.rs
src/common/src/models/dynamodb/: mod.rs  user_profile.rs  user_tasks.rs
src/common/src/services/: cors.rs  dynamodb.rs  mod.rs  mw_auth.rs
src/recommend-lambda/: Cargo.toml
src/recommend-lambda/src/: main.rs
src/userprofile-lambda/: Cargo.toml
src/userprofile-lambda/src/: db.rs  main.rs
src/userprofile-lambda/src/handlers/: mod.rs  profile.rs  profiles.rs  recommend.rs  register.rs
src/userprofile-lambda/src/models/: cluster.rs  external.rs  mod.rs  profiles.rs  recommend.rs  register.rs
src/usertasks-lambda/: Cargo.toml
src/usertasks-lambda/src/: data.rs  db.rs  main.rs
src/usertasks-lambda/src/handlers/: mod.rs  recommend_test.rs  schedule.rs  tasks.rs
src/usertasks-lambda/src/models/: mod.rs  request.rs  response.rs
