[workspace]
members = ["src/common", "src/userprofile-lambda", "src/usertasks-lambda"]

[workspace.dependencies]
axum = "0.7"
aws-config = "1.5"
aws-sdk-dynamodb = "1.52"

lambda_http = "0.13"
lambda_runtime = "0.13"

tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.19", features = ["derive"] }

chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.5"
uuid = { version = "1.11.0", features = ["v8"] }
