[package]
name = "bustleit-backend-serverless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.5"
aws-sdk-dynamodb = "1.52"
axum = "0.7"

lambda_http = "0.13"
lambda_runtime = "0.13"
rand = "0.8.5"          # Will be removed with mock_db

serde = { version = "1.0", features = ["derive"] }
serde_dynamo = "4.2"
serde_json = "1.0"

tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }

[dev-dependencies]
tokio-test = "0.4"
