[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
sqlx.workspace = true
thiserror.workspace = true
