[package]
name = "userprofile-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
axum.workspace = true
lambda_http.workspace = true
lambda_runtime.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
serde.workspace = true
aws-sdk-dynamodb.workspace = true
