[package]
name = "usertasks-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
axum.workspace = true
lambda_http.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
chrono.workspace = true
validator.workspace = true
uuid.workspace = true
sqlx.workspace = true
rand.workspace = true
serde_json.workspace = true
lazy_static = "1.4"
